--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ Flask==1.0.2
 flask-cors==3.0.8
 Flask-JWT-Extended==3.5.1
 flask-restplus==0.12.1
-psycopg2==2.7.7
+psycopg2-binary==2.8.5
 qwc-services-core==0.1.2
 requests==2.21.0
-SQLAlchemy==1.3.13
+SQLAlchemy==1.3.5
 werkzeug==0.16.1
