--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-Flask==1.0.2
-flask-cors==3.0.8
-Flask-JWT-Extended==3.5.1
-flask-restplus==0.12.1
-psycopg2-binary==2.9.1
-qwc-services-core==1.1.1
-requests==2.21.0
-SQLAlchemy==1.3.5
-werkzeug==0.16.1
+Flask==2.0.2
+Flask-JWT-Extended==4.3.1
+flask-restx==0.5.1
+psycopg2-binary==2.9.2
+qwc-services-core==1.3.14
+requests==2.26.0
+SQLAlchemy==1.4.28
+werkzeug==2.0.2
